modules/wycs/tests/valid/test_macro_02.wyal
define f(int x, int y) is x < y

assert:
  forall (int x, int y, int z):
    f(x,y) && f(y,z) ==> f(x,z)
