modules/wycs/tests/invalid/test_019.wyal
assert:
  forall(int x, int y):
   (x <= y && y <= x+1) ==> x == y